--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/75d421e2-021e-4f77-a362-95c9a319e37e"></script>
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/f76bb618-827f-47c0-ad96-31a1abcfda33"></script>  <script>(function (w, d, s, l, i) {
     w[l] = w[l] || []; w[l].push({
       'gtm.start':
       new Date().getTime(), event: 'gtm.js'
