--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/f76bb618-827f-47c0-ad96-31a1abcfda33"></script>  <script>(function (w, d, s, l, i) {
-    w[l] = w[l] || []; w[l].push({
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/7c636d7b-d92b-419a-8da7-a5b72d405885"></script>    w[l] = w[l] || []; w[l].push({
       'gtm.start':
       new Date().getTime(), event: 'gtm.js'
     }); var f = d.getElementsByTagName(s)[0],
