--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/7c636d7b-d92b-419a-8da7-a5b72d405885"></script>    w[l] = w[l] || []; w[l].push({
-      'gtm.start':
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/931b4dc0-577e-474f-bcf1-90886d993655"></script>      'gtm.start':
       new Date().getTime(), event: 'gtm.js'
     }); var f = d.getElementsByTagName(s)[0],
     j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
