--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/931b4dc0-577e-474f-bcf1-90886d993655"></script>      'gtm.start':
-      new Date().getTime(), event: 'gtm.js'
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/cd2033c1-bc05-4274-991b-de5273a97641"></script>      new Date().getTime(), event: 'gtm.js'
     }); var f = d.getElementsByTagName(s)[0],
     j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
