--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-<<<<<<< HEAD
-<script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/e8715b00-d752-4a7c-91a3-d20f5d164a44"></script>=======
-
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/e8715b00-d752-4a7c-91a3-d20f5d164a44"></script>
 
 
 
