--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/e8715b00-d752-4a7c-91a3-d20f5d164a44"></script>
-
+  <!--<script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/e8715b00-d752-4a7c-91a3-d20f5d164a44"></script>-->
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/233ed281-d22b-4684-8ba5-5d2ffbfedf67"></script>
 
 
 
