--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/bfe05f7c-1146-4b3b-b063-9a32c0b46608"></script>    rel="stylesheet">
-
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/4f63287d-5d42-4462-99b0-c12077ebb2a9"></script>
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
     w[l] = w[l] || []; w[l].push({
