--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <title>Cookie Manager</title>
 
   <!-- Cookie Scripts Section  -->
-  <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/a1f38164-eb61-4add-a8f6-a2dd2f91874b"></script>
+  <script type="text/javascript" src="banners/iab/iab-test-banner.js"></script>
+  <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
+<!-- <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/92a9e707-1d46-49b2-bae7-151add1c2cbe"></script>   <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/e858bbcb-d3eb-426a-9233-5e3827b5f0d2"></script> -->
+<!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/7eaaa5bf-494d-4512-9789-0b77d45b40d0"></script> -->
 
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,7 +48,7 @@
       formId: "0f45e9f9-0451-488e-babb-fd325ba2af4f"
     });
   </script>
-  <script type="module" src="/src/main.jsx"></script>
+  <!-- <script type="module" src="/src/main.jsx"></script> -->
 </body>
 <script>
   // document.addEventListener("click", reconsentPreference(agreed))
