--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       formId: "0f45e9f9-0451-488e-babb-fd325ba2af4f"
     });
   </script>
-  <script type="module" src="/src/main.jsx"></script>
+  <!-- <script type="module" src="/src/main.jsx"></script> -->
 </body>
 <script>
   // document.addEventListener("click", reconsentPreference(agreed))
