--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/95bff4c1-1eb5-4954-9e5c-90f017f267c8"></script>    w[l] = w[l] || []; w[l].push({
-      'gtm.start':
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/d2b077dd-3a4e-41fc-b121-809233e0d2a5"></script>      'gtm.start':
       new Date().getTime(), event: 'gtm.js'
     }); var f = d.getElementsByTagName(s)[0],
     j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
