--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/d2b077dd-3a4e-41fc-b121-809233e0d2a5"></script>      'gtm.start':
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/30f149c3-dfa9-4f52-bd84-a8f36726692c"></script>
+
+
+
+
+
+
+
+
+
+
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+    w[l] = w[l] || []; w[l].push({
+      'gtm.start':
       new Date().getTime(), event: 'gtm.js'
     }); var f = d.getElementsByTagName(s)[0],
     j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
@@ -35,7 +49,7 @@
       formId: "0f45e9f9-0451-488e-babb-fd325ba2af4f"
     });
   </script>
-  <!-- <script type="module" src="/src/main.jsx"></script> -->
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 <script>
   // document.addEventListener("click", reconsentPreference(agreed))
