--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/3d11675a-e1e6-48ec-91a1-ac4ec91acc61"></script>
+<script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/36c65eac-2c5e-4589-bca8-9e770ed5101b"></script>
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
