--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/6d1210e3-ac42-404d-953e-13bd4542d17c"></script>  
-  
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/553bffc7-9e98-494d-ad34-269ab3b11f76"></script>  
   
   
   
