--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/553bffc7-9e98-494d-ad34-269ab3b11f76"></script>  
-  
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/bf6584ab-b1c9-401e-ac4f-e86b3aadcacf"></script>  
   
   
   
