--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/2592bfb7-2adf-4d74-8a5a-a2ab985af144"></script>
+  <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script>
+  <!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/2592bfb7-2adf-4d74-8a5a-a2ab985af144"></script> -->
 
 
 
