--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <!-- <script type="text/javascript" src="banners/iab/refactored.js"></script> -->
   <script type="text/javascript" src="banners/non-iab/test-banner.js"></script>
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/b18230e2-b932-4b07-afd8-4f562a6b145d"></script> -->
-
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/fcdf12e9-4134-48ec-9484-ce7efd848e9f"></script>
 
 
 
