--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="banners/iab/refactored.js"></script> -->
-  <script type="text/javascript" src="banners/non-iab/test-banner.js"></script>
+  <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/fcdf12e9-4134-48ec-9484-ce7efd848e9f"></script>
-
 
 
 
