--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <!-- <script type="text/javascript" src="banners/iab/refactored.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/bd614e43-92c6-4c5c-94cc-7991d2c1c54b"></script>
-
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/7fc5fa13-8cc2-4efa-bdb5-727ac87e138c"></script>
 
 
 
