--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <!-- <script type="text/javascript" src="banners/iab/refactored.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/7fc5fa13-8cc2-4efa-bdb5-727ac87e138c"></script>
-
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/f2bc04f2f358/c60dd2b5-3747-4fae-906f-ad08b56a4f64"></script>
 
 
 
