--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="banners/non-iab/test-banner.js"></script>
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
   <!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/b18230e2-b932-4b07-afd8-4f562a6b145d"></script> -->
+<!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/1cc78d00-816a-4d1f-89f0-743df56f6fc7"></script> -->
+
 
 
 
