--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="banners/iab/refactored.js"></script> -->
-  <script type="text/javascript" src="banners/non-iab/test-banner.js"></script>
+  <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/b18230e2-b932-4b07-afd8-4f562a6b145d"></script> -->
-  <!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/1cc78d00-816a-4d1f-89f0-743df56f6fc7"></script> -->
-
+<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/f25de346-b68b-4158-a7d1-8056c325e0d4"></script>
 
 
 
