--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="banners/iab/refactored.js"></script> -->
-  <script type="text/javascript" src="banners/non-iab/test-banner.js"></script>
+  <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-<!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/6fed5708-b00c-4829-84c7-d18d141beb88"></script> -->
-
+<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/bb78273f-09e0-43fe-aacc-ccc721778b9a"></script>
 
 
 
