--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/f3603956-b520-4b6b-8c66-e7cc872b769f"></script>
+<script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/6ecd3174-5463-4bf0-86c9-e3dfc2353a9e"></script>
+
+
 
 
 
