--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-<script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/6ecd3174-5463-4bf0-86c9-e3dfc2353a9e"></script>
-
+<script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/59a7648e4e95/d5c7d850-bb58-476c-9f59-995d2b807a8a"></script>
 
 
 
