--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
   <title>Cookie Manager</title>
 
   <!-- Cookie Scripts Section  -->
@@ -12,7 +15,10 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-<script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/59a7648e4e95/d5c7d850-bb58-476c-9f59-995d2b807a8a"></script>
+<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/f2bc04f2f358/c5e5312f-6473-4ff6-87b0-c33e06837cca"></script>
+
+
+
 
 
 
