--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 
-<style>
+<!-- <style>
   #debug-panel {
     position: fixed;
     bottom: 0;
@@ -109,7 +109,7 @@
 
   // Call function on page load
   showLocalStorage();
-</script>
+</script> -->
 
 
   
