--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/a5bda99bd74f/f323acc7-87b4-4016-912a-3f48b77bb36b"></script>
-
-
+  <!-- <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/a5bda99bd74f/f323acc7-87b4-4016-912a-3f48b77bb36b"></script> -->
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/a5bda99bd74f/f1e71a2f-e56e-4e20-bd3d-a5fd0277d968"></script>
 
 <!-- <style>
   #debug-panel {
