--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
   <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/d5bbbc49-02a0-408f-aa54-aab9695d8cea"></script>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- <style>
   #debug-panel {
     position: fixed;
@@ -136,7 +151,7 @@
       formId: "0f45e9f9-0451-488e-babb-fd325ba2af4f"
     });
   </script>
-  <!-- <script type="module" src="/src/main.jsx"></script> -->
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 <script>
   // document.addEventListener("click", reconsentPreference(agreed))
