--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
   <!-- <script type="text/javascript" src="banners/iab/refactored.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
-  <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-<!--   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/1a184157-46ce-4e23-af15-714ca3c9ca7d"></script> -->
-<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/d947dace-6842-44bf-b323-fb67536eb9da"></script>
-
+÷<!--   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/1a184157-46ce-4e23-af15-714ca3c9ca7d"></script> -->
+<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/0a8f0a4d-c8c4-4d0a-82f2-07b472055dac"></script>
 
 
 
