--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
   <!--   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/1a184157-46ce-4e23-af15-714ca3c9ca7d"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/f59b4176-1355-49d0-913a-279b0bb4f02f"></script>
-
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/14b53dfd-409c-415d-aebc-51e585973eed"></script>
 
 
 <!-- <style>
