--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/d22b0247-9439-4e3f-9155-a987d9224dda"></script>
-
+  <!-- <script type="text/javascript" src="banners/non-iab/translation.js"></script> -->
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/2de3ff45-ba2a-4b4f-b3d2-dd485f806bb2"></script>
 
 
 <!-- <style>
