--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/translation.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/1aff596b-1652-4ceb-b18d-effcff42076d"></script>
-
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/f42cd15b-2434-4636-ba5e-f497dfbb2e86"></script>
 
 <!-- <style>
   #debug-panel {
