--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
   <!--   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/1a184157-46ce-4e23-af15-714ca3c9ca7d"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/a5bda99bd74f/149394bf-5207-41f5-99e4-7b9fb5a32595"></script>
-
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/340adc47-7e19-4775-b9ea-27600bc379f5"></script>
+  
+  
 <!-- <style>
   #debug-panel {
     position: fixed;
