--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
   <!--   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/1a184157-46ce-4e23-af15-714ca3c9ca7d"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/f2bc04f2f358/b11ae026-c5f3-4611-8e26-260236d07c57"></script>  
-<!-- <style>
+  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/6a6c58d9a14c/abc2abd3-020d-4048-9ed9-09bf91c36db2"></script><!-- <style>
   #debug-panel {
     position: fixed;
     bottom: 0;
