--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
   <!--   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/1a184157-46ce-4e23-af15-714ca3c9ca7d"></script> -->
-  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/6a6c58d9a14c/abc2abd3-020d-4048-9ed9-09bf91c36db2"></script><!-- <style>
+  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/ba0be9c8-1464-48a0-a27b-43edd56fd68e"></script>  
+  
+  <!-- <style>
   #debug-panel {
     position: fixed;
     bottom: 0;
