--- a/index.html
+++ b/index.html
@@ -15,95 +15,36 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <!--   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/1a184157-46ce-4e23-af15-714ca3c9ca7d"></script> -->
-  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/693174f4-d6d2-4e6d-b60a-8e25b998d274"></script>  #debug-panel {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    max-height: 40%;
-    overflow-y: auto;
-    background: rgba(0,0,0,0.85);
-    color: #00ff9d;
-    font-family: monospace;
-    font-size: 12px;
-    padding: 8px;
-    z-index: 99999;
-    border-top: 2px solid #00ff9d;
-    white-space: pre-wrap;
-  }
-</style>
-
-<div id="debug-panel"></div>
-
-<script>
-(function(){
-  const debugPanel = document.getElementById('debug-panel');
-
-  function logToPanel(type, message) {
-    const time = new Date().toLocaleTimeString();
-    debugPanel.innerHTML += `[${time}] ${type}: ${message}\n`;
-    debugPanel.scrollTop = debugPanel.scrollHeight;
-  }
-
-  // Capture console.log
-  const originalLog = console.log;
-  console.log = function(...args) {
-    originalLog.apply(console, args);
-    logToPanel('LOG', args.map(a => (typeof a === 'object' ? JSON.stringify(a) : a)).join(' '));
-  };
-
-  // Capture console.error
-  const originalError = console.error;
-  console.error = function(...args) {
-    originalError.apply(console, args);
-    logToPanel('ERROR', args.map(a => {
-      if (a instanceof Error) {
-        return `${a.message}\nStack: ${a.stack}`;
-      } else if (typeof a === 'object') {
-        return JSON.stringify(a, null, 2);
-      } else {
-        return a;
-      }
-    }).join(' '));
-  };
-
-  // Capture window errors
-  window.onerror = function(msg, url, line, col, error) {
-    logToPanel('JS ERROR', `${msg} at ${url}:${line}:${col}`);
-  };
-
-  console.log("✅ Debug panel initialized!");
-})();
-</script>
+   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/2bc6c9d1deed/714edd4c-7a12-484e-806c-c6031799a8ae"></script>
 
 
-<div id="storage-viewer" style="padding:10px; font-family: monospace; white-space: pre-wrap; background:#f4f4f4; border:1px solid #ccc;"></div>
-
-<script>
-  function showLocalStorage() {
-    const viewer = document.getElementById('storage-viewer');
-    let output = '📦 LocalStorage Items:\n\n';
-
-    if (localStorage.length === 0) {
-      output += 'No items found in localStorage.';
-    } else {
-      for (let i = 0; i < localStorage.length; i++) {
-        const key = localStorage.key(i);
-        const value = localStorage.getItem(key);
-        output += `${i + 1}. ${key}: ${value}\n`;
-      }
-    }
-
-    viewer.textContent = output;
-  }
-
-  // Call function on page load
-  showLocalStorage();
-</script> -->
 
 
-  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
     w[l] = w[l] || []; w[l].push({
