--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-   <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/2bc6c9d1deed/714edd4c-7a12-484e-806c-c6031799a8ae"></script>
-
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/f2bc04f2f358/f34be088-e626-4d85-a89a-c032aaaa277e"></script>
 
 
 
