--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/2621ceb1-2828-4ea2-a1d6-aaa0859c6117"></script>
-
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/0bd2e51f-3cb5-4e45-80a2-b5dd72117e35"></script>
 
 
 
