--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/f2bc04f2f358/37128658-9708-4a24-bd6b-33f8005fb81f"></script>
-
+  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/5b4bdb3f-a014-4623-9c4d-2473f13ce935"></script>
 
 
 
