--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/e1f2afd3-c4a0-42d5-9980-0e4d26f0edb9"></script>
-
+  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/8c6c7d59-c943-4799-9c3d-e53a2a65a9ba"></script>
 
 
 
