--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
 
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/ae2e3d4a-7a43-4f09-a15d-7b5cd2dab8f0"></script>
-
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/f35333b2-1445-4034-bb01-1f346702bd92"></script>
 
 
 
