--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/outage/cookie-banner/assets/something"></script>
+  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/2da8e322-93e4-4cd2-adcb-907817428a50"></script>
+  
+  
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
