--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-
- <script type="text/javascript" src="<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/768b7ce14ec2/5faf7e2d-eece-4bc3-9a89-96ff40f3ec29"></script>"></script>
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/768b7ce14ec2/5faf7e2d-eece-4bc3-9a89-96ff40f3ec29"></script>
 
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
   <!-- Google Tag Manager -->
