--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/1fe6b987-6368-44da-a13e-5f0d370a04fd"></script>
-      
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/66f1411b-6593-408d-9096-47a92f1f9b29"></script>
+        
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
