--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/65953641-d1a0-4057-b38f-6e1645fbc542"></script>
-                             
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/6a6c58d9a14c/0ca9a2f0-7780-40a8-a4b5-c92c5769d84e"></script>
+                               
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
