--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/test-banner.js"></script> -->
   <!-- <script type="text/javascript" src="banners/non-iab/obfuscated-staging.js"></script> -->
-  <script type="text/javascript" <script type="text/javascript"
+  <script type="text/javascript"
     src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/72c53aa1642b/0a78b95d-6c6f-4afb-a9de-e177e4686e8d"></script>
   <!-- <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/a5bda99bd74f/e8dede3c-6004-4853-95b9-ef0136729c72"></script> -->
   <!-- Google Tag Manager -->
